<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="2dp"
    android:padding="08dp"
    android:layout_height="match_parent"
    tools:context="com.example.mister_rao.regisapp.FormActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="2dp"
    android:padding="08dp"
    android:layout_height="wrap_content"
    tools:context="com.example.mister_rao.regisapp.FormActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:textSize="25sp"
        android:textColor="@color/colorPrimaryDark"
        android:paddingBottom="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Pname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
        android:id="@+id/PName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_gravity="start"
        android:inputType="textPersonName"
        android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="2dp"
        android:padding="08dp"
        android:layout_height="wrap_content"
        tools:context="com.example.mister_rao.regisapp.FormActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/I_am"
            android:layout_gravity="center"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/radioGrp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/radioM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:buttonTint="@color/colorPrimaryDark"
                android:checked="true"
                android:layout_weight="0.5"
                android:textSize="14sp"
                android:text="@string/Male"
                />
            <RadioButton
                android:id="@+id/radioF"
                android:layout_width="0dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:checked="false"
                android:layout_weight="1"
                android:textSize="14sp"
                android:text="@string/Female"
                />
        </RadioGroup>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/Age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Age"
            android:layout_gravity="start"
            android:inputType="number"
            android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/Mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:layout_gravity="start"
        android:inputType="textEmailAddress"
        android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>




    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Uname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
        android:id="@+id/UName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Uname"
        android:layout_gravity="start"
        android:inputType="textPersonName"
        android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <EditText
        android:id="@+id/Pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Pass1"
        android:layout_gravity="start"
        android:inputType="textPassword"
        android:layout_margin="2dp"
        android:drawableEnd="@android:drawable/ic_menu_view"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_PassConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/PassConf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Pass2"
        android:layout_gravity="start"
        android:inputType="textPassword"
        android:layout_margin="2dp"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/submit"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:textStyle="bold"/>



</LinearLayout>
</ScrollView>